crates/gridwell-writer-svg/tests/snapshots/snapshots__align-left-center-right.snap
---
source: crates/gridwell-writer-svg/tests/snapshots.rs
expression: out
---
<svg xmlns="http://www.w3.org/2000/svg" width="186" height="96" viewBox="0 0 186 96">
<style>text { font-family: Arial, sans-serif; font-size: 14px; }</style>
<text x="8" y="22.9" font-size="14px" xml:space="preserve"><tspan font-weight="bold">Left</tspan></text>
<text x="87.24" y="22.9" font-size="14px" text-anchor="middle" xml:space="preserve"><tspan font-weight="bold">Center</tspan></text>
<text x="177.96" y="22.9" font-size="14px" text-anchor="end" xml:space="preserve"><tspan font-weight="bold">Right</tspan></text>
<text x="8" y="50.9" font-size="14px" xml:space="preserve">aaa</text>
<text x="87.24" y="50.9" font-size="14px" text-anchor="middle" xml:space="preserve">bbb</text>
<text x="177.96" y="50.9" font-size="14px" text-anchor="end" xml:space="preserve">ccc</text>
<text x="8" y="78.9" font-size="14px" xml:space="preserve">d</text>
<text x="87.24" y="78.9" font-size="14px" text-anchor="middle" xml:space="preserve">e</text>
<text x="177.96" y="78.9" font-size="14px" text-anchor="end" xml:space="preserve">f</text>
<line x1="0" y1="32" x2="49.99" y2="32" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="49.99" y1="32" x2="124.49" y2="32" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="124.49" y1="32" x2="185.96" y2="32" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="0" y1="60" x2="49.99" y2="60" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="49.99" y1="60" x2="124.49" y2="60" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="124.49" y1="60" x2="185.96" y2="60" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="0" y1="88" x2="49.99" y2="88" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="49.99" y1="88" x2="124.49" y2="88" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="124.49" y1="88" x2="185.96" y2="88" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="0" y1="32" x2="185.96" y2="32" stroke="#333333" stroke-width="1.5"/>
</svg>
