crates/gridwell-writer-svg/tests/snapshots/snapshots__colspan-basic.snap
---
source: crates/gridwell-writer-svg/tests/snapshots.rs
expression: out
---
<svg xmlns="http://www.w3.org/2000/svg" width="145" height="124" viewBox="0 0 145 124">
<style>text { font-family: Arial, sans-serif; font-size: 14px; }</style>
<text x="105.25" y="22.9" font-size="14px" text-anchor="middle" xml:space="preserve"><tspan font-weight="bold">Scores</tspan></text>
<text x="8" y="50.9" font-size="14px" xml:space="preserve"><tspan font-weight="bold">Name</tspan></text>
<text x="97.25" y="50.9" font-size="14px" text-anchor="end" xml:space="preserve"><tspan font-weight="bold">Q1</tspan></text>
<text x="136.83" y="50.9" font-size="14px" text-anchor="end" xml:space="preserve"><tspan font-weight="bold">Q2</tspan></text>
<text x="8" y="78.9" font-size="14px" xml:space="preserve">Alice</text>
<text x="97.25" y="78.9" font-size="14px" text-anchor="end" xml:space="preserve">90</text>
<text x="136.83" y="78.9" font-size="14px" text-anchor="end" xml:space="preserve">95</text>
<text x="8" y="106.9" font-size="14px" xml:space="preserve">Bob</text>
<text x="97.25" y="106.9" font-size="14px" text-anchor="end" xml:space="preserve">85</text>
<text x="136.83" y="106.9" font-size="14px" text-anchor="end" xml:space="preserve">88</text>
<line x1="0" y1="32" x2="65.67" y2="32" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="65.67" y1="32" x2="144.83" y2="32" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="0" y1="60" x2="65.67" y2="60" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="65.67" y1="60" x2="105.25" y2="60" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="105.25" y1="60" x2="144.83" y2="60" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="0" y1="88" x2="65.67" y2="88" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="65.67" y1="88" x2="105.25" y2="88" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="105.25" y1="88" x2="144.83" y2="88" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="0" y1="116" x2="65.67" y2="116" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="65.67" y1="116" x2="105.25" y2="116" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="105.25" y1="116" x2="144.83" y2="116" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="0" y1="60" x2="144.83" y2="60" stroke="#333333" stroke-width="1.5"/>
</svg>
