crates/gridwell-writer-svg/tests/snapshots/snapshots__colspan-full-width.snap
---
source: crates/gridwell-writer-svg/tests/snapshots.rs
expression: out
---
<svg xmlns="http://www.w3.org/2000/svg" width="167" height="96" viewBox="0 0 167 96">
<style>text { font-family: Arial, sans-serif; font-size: 14px; }</style>
<text x="8" y="22.9" font-size="14px" xml:space="preserve"><tspan font-weight="bold">Full-width spanner</tspan></text>
<text x="8" y="50.9" font-size="14px" xml:space="preserve"><tspan font-weight="bold">A</tspan></text>
<text x="63.51" y="50.9" font-size="14px" xml:space="preserve"><tspan font-weight="bold">B</tspan></text>
<text x="119.02" y="50.9" font-size="14px" xml:space="preserve"><tspan font-weight="bold">C</tspan></text>
<text x="8" y="78.9" font-size="14px" xml:space="preserve">1</text>
<text x="63.51" y="78.9" font-size="14px" xml:space="preserve">2</text>
<text x="119.02" y="78.9" font-size="14px" xml:space="preserve">3</text>
<line x1="0" y1="32" x2="166.53" y2="32" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="0" y1="60" x2="55.51" y2="60" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="55.51" y1="60" x2="111.02" y2="60" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="111.02" y1="60" x2="166.53" y2="60" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="0" y1="88" x2="55.51" y2="88" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="55.51" y1="88" x2="111.02" y2="88" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="111.02" y1="88" x2="166.53" y2="88" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="0" y1="60" x2="166.53" y2="60" stroke="#333333" stroke-width="1.5"/>
</svg>
