crates/gridwell-writer-svg/tests/snapshots/snapshots__decimal-char-align.snap
---
source: crates/gridwell-writer-svg/tests/snapshots.rs
expression: out
---
<svg xmlns="http://www.w3.org/2000/svg" width="133" height="124" viewBox="0 0 133 124">
<style>text { font-family: Arial, sans-serif; font-size: 14px; }</style>
<text x="8" y="22.9" font-size="14px" xml:space="preserve"><tspan font-weight="bold">Item</tspan></text>
<text x="124.51" y="22.9" font-size="14px" text-anchor="end" xml:space="preserve"><tspan font-weight="bold">Amount</tspan></text>
<text x="8" y="50.9" font-size="14px" xml:space="preserve">A</text>
<text x="124.51" y="50.9" font-size="14px" text-anchor="end" xml:space="preserve">1234.5</text>
<text x="8" y="78.9" font-size="14px" xml:space="preserve">B</text>
<text x="124.51" y="78.9" font-size="14px" text-anchor="end" xml:space="preserve">6.789</text>
<text x="8" y="106.9" font-size="14px" xml:space="preserve">C</text>
<text x="124.51" y="106.9" font-size="14px" text-anchor="end" xml:space="preserve">42.0</text>
<line x1="0" y1="32" x2="53.48" y2="32" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="53.48" y1="32" x2="132.51" y2="32" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="0" y1="60" x2="53.48" y2="60" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="53.48" y1="60" x2="132.51" y2="60" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="0" y1="88" x2="53.48" y2="88" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="53.48" y1="88" x2="132.51" y2="88" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="0" y1="116" x2="53.48" y2="116" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="53.48" y1="116" x2="132.51" y2="116" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="0" y1="32" x2="132.51" y2="32" stroke="#333333" stroke-width="1.5"/>
</svg>
