crates/gridwell-writer-svg/tests/snapshots/snapshots__fixed-table-width.snap
---
source: crates/gridwell-writer-svg/tests/snapshots.rs
expression: out
---
<svg xmlns="http://www.w3.org/2000/svg" width="90" height="68" viewBox="0 0 90 68">
<style>text { font-family: Arial, sans-serif; font-size: 14px; }</style>
<text x="8" y="22.9" font-size="14px" xml:space="preserve"><tspan font-weight="bold">A</tspan></text>
<text x="38" y="22.9" font-size="14px" xml:space="preserve"><tspan font-weight="bold">B</tspan></text>
<text x="68" y="22.9" font-size="14px" xml:space="preserve"><tspan font-weight="bold">C</tspan></text>
<text x="8" y="50.9" font-size="14px" xml:space="preserve">1</text>
<text x="38" y="50.9" font-size="14px" xml:space="preserve">2</text>
<text x="68" y="50.9" font-size="14px" xml:space="preserve">3</text>
<line x1="0" y1="32" x2="30" y2="32" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="30" y1="32" x2="60" y2="32" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="60" y1="32" x2="90" y2="32" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="0" y1="60" x2="30" y2="60" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="30" y1="60" x2="60" y2="60" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="60" y1="60" x2="90" y2="60" stroke="#d0d0d0" stroke-width="0.5"/>
<line x1="0" y1="32" x2="90" y2="32" stroke="#333333" stroke-width="1.5"/>
</svg>
